--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -80,23 +80,13 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <div class='container'>
 <div class='left'>
 <p color:red;>Kidnapped: 59</p>
-<p color:black;>Murdered: 34</p>
-<p color:#FFD700;>Alive: 25</p>
+<p color:black;>Murdered: 0</p>
+<p color:#FFD700;>Alive: 59</p>
 </div>
 <div class='right'>
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/DavidKonio.jpg" alt="דוד קוניו">
-<figcaption>DavidKonio<br>דוד קוניו</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielKonio.jpg" alt="אריאל קוניו">
-<figcaption>ArielKonio<br>אריאל קוניו</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
-<figcaption>EitanHoran<br>איתן הורן</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
+<figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
 </figure>
 
 <figure>
@@ -115,8 +105,8 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
-<figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
+<figcaption>EitanHoran<br>איתן הורן</figcaption>
 </figure>
 
 <figure>
@@ -205,93 +195,103 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/JudyWeinstein.jpg" alt="ג'ודי וינשטיין-חגי ז"ל">
-<figcaption>JudyWeinstein<br>ג'ודי וינשטיין-חגי ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DavidKonio.jpg" alt="דוד קוניו">
+<figcaption>DavidKonio<br>דוד קוניו</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/AvivAzili.jpg" alt="אביב אצילי ז"ל">
-<figcaption>AvivAzili<br>אביב אצילי ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielKonio.jpg" alt="אריאל קוניו">
+<figcaption>ArielKonio<br>אריאל קוניו</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il/2025/03/09/400_0903_man.png" alt="תמיר אדר ז"ל">
-<figcaption>400_0903_man<br>תמיר אדר ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/JudyWeinstein.jpg" alt="ג'ודי וינשטיין-חגי">
+<figcaption>JudyWeinstein<br>ג'ודי וינשטיין-חגי</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/ArieZalmanovich.jpg" alt="אריה זלמנוביץ' ז"ל">
-<figcaption>ArieZalmanovich<br>אריה זלמנוביץ' ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvivAzili.jpg" alt="אביב אצילי">
+<figcaption>AvivAzili<br>אביב אצילי</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il/2023/11/05/GadiHagai.jpg" alt="גדי חגי ז"ל">
-<figcaption>GadiHagai<br>גדי חגי ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il/2025/03/09/400_0903_man.png" alt="תמיר אדר">
+<figcaption>400_0903_man<br>תמיר אדר</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il/2023/11/05/YairJacob.jpg" alt="יאיר יעקב ז"ל">
-<figcaption>YairJacob<br>יאיר יעקב ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArieZalmanovich.jpg" alt="אריה זלמנוביץ'">
+<figcaption>ArieZalmanovich<br>אריה זלמנוביץ'</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/AmiramCooper.jpg" alt="עמירם קופר ז"ל">
-<figcaption>AmiramCooper<br>עמירם קופר ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/11/05/GadiHagai.jpg" alt="גדי חגי">
+<figcaption>GadiHagai<br>גדי חגי</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/RonenEngel.jpg" alt="רונן אנגל ז"ל">
-<figcaption>RonenEngel<br>רונן אנגל ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/11/05/YairJacob.jpg" alt="יאיר יעקב">
+<figcaption>YairJacob<br>יאיר יעקב</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il/2023/12/01/margalit.jfif" alt="אליהו מרגלית ז"ל">
-<figcaption>margalit<br>אליהו מרגלית ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AmiramCooper.jpg" alt="עמירם קופר">
+<figcaption>AmiramCooper<br>עמירם קופר</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/InbarHaiman.jpg" alt="ענבר הימן ז"ל">
-<figcaption>InbarHaiman<br>ענבר הימן ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/RonenEngel.jpg" alt="רונן אנגל">
+<figcaption>RonenEngel<br>רונן אנגל</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il/2023/11/24/Pic400.png" alt="עפרה קידר ז"ל">
-<figcaption>Pic400<br>עפרה קידר ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/12/01/margalit.jfif" alt="אליהו מרגלית">
+<figcaption>margalit<br>אליהו מרגלית</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il/2023/11/24/sahar.jpeg" alt="סהר ברוך ז"ל">
-<figcaption>sahar<br>סהר ברוך ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/InbarHaiman.jpg" alt="ענבר הימן">
+<figcaption>InbarHaiman<br>ענבר הימן</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il/2023/12/02/AsafHamami.jpg" alt="אל"ם אסף חממי ז"ל">
-<figcaption>AsafHamami<br>אל"ם אסף חממי ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/11/24/Pic400.png" alt="עפרה קידר">
+<figcaption>Pic400<br>עפרה קידר</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/GuyIluz.jpg" alt="גיא אילוז ז"ל">
-<figcaption>GuyIluz<br>גיא אילוז ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/11/24/sahar.jpeg" alt="סהר ברוך">
+<figcaption>sahar<br>סהר ברוך</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/TalHaimi.jpg" alt="טל חיימי ז"ל">
-<figcaption>TalHaimi<br>טל חיימי ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/12/02/AsafHamami.jpg" alt="אל"ם אסף חממי">
+<figcaption>AsafHamami<br>אל"ם אסף חממי</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/EdenShteoi.jpg" alt="עידן שתיוי ז"ל">
-<figcaption>EdenShteoi<br>עידן שתיוי ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GuyIluz.jpg" alt="גיא אילוז">
+<figcaption>GuyIluz<br>גיא אילוז</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/EliSharabi.jpg" alt="יוסי שרעבי ז"ל">
-<figcaption>EliSharabi<br>יוסי שרעבי ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/TalHaimi.jpg" alt="טל חיימי">
+<figcaption>TalHaimi<br>טל חיימי</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il/2023/11/30/goldinhadar.jpg" alt="סגן הדר גולדין ז"ל">
-<figcaption>goldinhadar<br>סגן הדר גולדין ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EdenShteoi.jpg" alt="עידן שתיוי">
+<figcaption>EdenShteoi<br>עידן שתיוי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EliSharabi.jpg" alt="יוסי שרעבי">
+<figcaption>EliSharabi<br>יוסי שרעבי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/30/goldinhadar.jpg" alt="סגן הדר גולדין">
+<figcaption>goldinhadar<br>סגן הדר גולדין</figcaption>
 </figure>
 
 <figure>
@@ -300,83 +300,83 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il/2024/02/18/400_1802.png" alt="סרן דניאל פרץ ז"ל">
-<figcaption>400_1802<br>סרן דניאל פרץ ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il/2024/02/18/400_1802.png" alt="סרן דניאל פרץ">
+<figcaption>400_1802<br>סרן דניאל פרץ</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/10/21/MeniGudard.jpg" alt="מני גודארד ז"ל">
-<figcaption>MeniGudard<br>מני גודארד ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/10/21/MeniGudard.jpg" alt="מני גודארד">
+<figcaption>MeniGudard<br>מני גודארד</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2024/01/25/400X.png" alt="סמל עוז דניאל ז"ל">
-<figcaption>400X<br>סמל עוז דניאל ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2024/01/25/400X.png" alt="סמל עוז דניאל">
+<figcaption>400X<br>סמל עוז דניאל</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/LiorRudaif.jpg" alt="ליאור רודאיף ז"ל">
-<figcaption>LiorRudaif<br>ליאור רודאיף ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/LiorRudaif.jpg" alt="ליאור רודאיף">
+<figcaption>LiorRudaif<br>ליאור רודאיף</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/OmarNautra.jpg" alt="סרן עומר נאוטרה ז"ל">
-<figcaption>OmarNautra<br>סרן עומר נאוטרה ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OmarNautra.jpg" alt="סרן עומר נאוטרה">
+<figcaption>OmarNautra<br>סרן עומר נאוטרה</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/OrielBaruh.jpg" alt="אוריאל ברוך ז"ל">
-<figcaption>OrielBaruh<br>אוריאל ברוך ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OrielBaruh.jpg" alt="אוריאל ברוך">
+<figcaption>OrielBaruh<br>אוריאל ברוך</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il/2024/06/24/400.png" alt="רס"ם מחמד אל-אטרש ז"ל">
-<figcaption>400<br>רס"ם מחמד אל-אטרש ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il/2024/06/24/400.png" alt="רס"ם מחמד אל-אטרש">
+<figcaption>400<br>רס"ם מחמד אל-אטרש</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/DrorOr.jpg" alt="דרור אור ז"ל">
-<figcaption>DrorOr<br>דרור אור ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DrorOr.jpg" alt="דרור אור">
+<figcaption>DrorOr<br>דרור אור</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/JonathanSmareno.jpg" alt="יונתן סמרנו ז"ל">
-<figcaption>JonathanSmareno<br>יונתן סמרנו ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/JonathanSmareno.jpg" alt="יונתן סמרנו">
+<figcaption>JonathanSmareno<br>יונתן סמרנו</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/RanGoyali.jpg" alt="רס"ל רן גואילי ז"ל">
-<figcaption>RanGoyali<br>רס"ל רן גואילי ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/RanGoyali.jpg" alt="רס"ל רן גואילי">
+<figcaption>RanGoyali<br>רס"ל רן גואילי</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/JoshuaLuitoMollel.jpg" alt="ג'ושוע לואיטו מולל ז"ל">
-<figcaption>JoshuaLuitoMollel<br>ג'ושוע לואיטו מולל ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/JoshuaLuitoMollel.jpg" alt="ג'ושוע לואיטו מולל">
+<figcaption>JoshuaLuitoMollel<br>ג'ושוע לואיטו מולל</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il/2023/12/07/levinson.png" alt="סמ"ר שי לוינסון ז"ל">
-<figcaption>levinson<br>סמ"ר שי לוינסון ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/12/07/levinson.png" alt="סמ"ר שי לוינסון">
+<figcaption>levinson<br>סמ"ר שי לוינסון</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/eitanLevy.jpg" alt="איתן לוי ז"ל">
-<figcaption>eitanLevy<br>איתן לוי ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/eitanLevy.jpg" alt="איתן לוי">
+<figcaption>eitanLevy<br>איתן לוי</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/IlanVais.jpg" alt="אילן וייס ז"ל">
-<figcaption>IlanVais<br>אילן וייס ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/IlanVais.jpg" alt="אילן וייס">
+<figcaption>IlanVais<br>אילן וייס</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il/2024/04/16/400.png" alt="סונטיה אקרסרי ז"ל">
-<figcaption>400<br>סונטיה אקרסרי ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il/2024/04/16/400.png" alt="סונטיה אקרסרי">
+<figcaption>400<br>סונטיה אקרסרי</figcaption>
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il/2024/05/16/sudthiakzl400.png" alt="סותטיסאק רינטלאק ז"ל">
-<figcaption>sudthiakzl400<br>סותטיסאק רינטלאק ז"ל</figcaption>
+<img class="alive" src="https://img.mako.co.il/2024/05/16/sudthiakzl400.png" alt="סותטיסאק רינטלאק">
+<figcaption>sudthiakzl400<br>סותטיסאק רינטלאק</figcaption>
 </figure>
 
 </div>
