--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -79,11 +79,556 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <body>
 <div class='container'>
 <div class='left'>
-<p color:red;>Kidnapped: 0</p>
-<p color:black;>Murdered: 0</p>
-<p color:#FFD700;>Alive: 0</p>
+<p color:red;>Kidnapped: 109</p>
+<p color:black;>Murdered: 1</p>
+<p color:#FFD700;>Alive: 108</p>
 </div>
 <div class='right'>
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/SharCalderon.jpg" alt="סהר קלדרון">
+<figcaption>SharCalderon<br>סהר קלדרון</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ErezKalderon.jpg" alt="ארז קלדרון">
+<figcaption>ErezKalderon<br>ארז קלדרון</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/MikaAngle.jpg" alt="מיקה אנגל">
+<figcaption>MikaAngle<br>מיקה אנגל</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YuvalAngel.jpg" alt="יובל אנגל">
+<figcaption>YuvalAngel<br>יובל אנגל</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KarinaAngle.jpg" alt="קרינה אנגל-ברט">
+<figcaption>KarinaAngle<br>קרינה אנגל-ברט</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/05/LiatAzili.jpg" alt="ליאת אצילי">
+<figcaption>LiatAzili<br>ליאת אצילי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AlmaOr.jpg" alt="עלמה אור">
+<figcaption>AlmaOr<br>עלמה אור</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/05/LiamOrr.jpg" alt="ליאם אור">
+<figcaption>LiamOrr<br>ליאם אור</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/NoamOr.jpg" alt="נועם אור">
+<figcaption>NoamOr<br>נועם אור</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/RamonKirshtBuchstab.jpg" alt="רימון קירשט בוכשטב">
+<figcaption>RamonKirshtBuchstab<br>רימון קירשט בוכשטב</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/SapirCohen.jpg" alt="ספיר כהן">
+<figcaption>SapirCohen<br>ספיר כהן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/Yelena-Trupanov.jpg" alt="ילנה טרופנוב">
+<figcaption>Yelena-Trupanov<br>ילנה טרופנוב</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/IrinaTati.jpg" alt="אירנה טאטי">
+<figcaption>IrinaTati<br>אירנה טאטי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ClaraMarman.jpg" alt="קלרה מרמן">
+<figcaption>ClaraMarman<br>קלרה מרמן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/MiaLeimberg.jpg" alt="מיאה ליימברג">
+<figcaption>MiaLeimberg<br>מיאה ליימברג</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GavrielaLaimberg.jpg" alt="גבריאלה ליימברג">
+<figcaption>GavrielaLaimberg<br>גבריאלה ליימברג</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/JordanRomanGat.jpg" alt="ירדן רומן גת">
+<figcaption>JordanRomanGat<br>ירדן רומן גת</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OfirAngel.jpg" alt="אופיר אנגל">
+<figcaption>OfirAngel<br>אופיר אנגל</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/RazAsher.jpg" alt="רז אשר">
+<figcaption>RazAsher<br>רז אשר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvivAsher.jpg" alt="אביב אשר">
+<figcaption>AvivAsher<br>אביב אשר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DoronKazEsher.jpg" alt="דורון כץ-אשר">
+<figcaption>DoronKazEsher<br>דורון כץ-אשר</figcaption>
+</figure>
+
+<figure>
+<img class="dead" src="https://img.mako.co.il//2023/11/05/HannaKazir.jpg" alt="חנה קציר ז"ל">
+<figcaption>HannaKazir<br>חנה קציר ז"ל</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KerenMonder.jpg" alt="קרן מונדר">
+<figcaption>KerenMonder<br>קרן מונדר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadMondar.jpg" alt="אוהד מונדר">
+<figcaption>OhadMondar<br>אוהד מונדר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/RuthieMunder.jpg" alt="רותי מונדר">
+<figcaption>RuthieMunder<br>רותי מונדר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/05/MeravTal.jpg" alt="מירב טל">
+<figcaption>MeravTal<br>מירב טל</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OrYaacov.jpg" alt="אור יעקב">
+<figcaption>OrYaacov<br>אור יעקב</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/IgilJacob.jpg" alt="יגיל יעקב">
+<figcaption>IgilJacob<br>יגיל יעקב</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/RayaRotem.jpg" alt="רעיה רותם">
+<figcaption>RayaRotem<br>רעיה רותם</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/HilaRotem.jpg" alt="הילה רותם-שושני">
+<figcaption>HilaRotem<br>הילה רותם-שושני</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/29/yafaadar.jpg" alt="יפה אדר">
+<figcaption>yafaadar<br>יפה אדר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/06/EmilyHand.jpg" alt="אמילי הנד">
+<figcaption>EmilyHand<br>אמילי הנד</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/Miasem.jpg" alt="מייה שם">
+<figcaption>Miasem<br>מייה שם</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/MoranStellaYanai.jpg" alt="מורן סטלה ינאי">
+<figcaption>MoranStellaYanai<br>מורן סטלה ינאי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AlmaAbraham.jpg" alt="אלמה אברהם">
+<figcaption>AlmaAbraham<br>אלמה אברהם</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GaliTrashchenski.jpg" alt="גלי טרשצ'נסקי">
+<figcaption>GaliTrashchenski<br>גלי טרשצ'נסקי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AmitSosna.jpg" alt="עמית סוסנה">
+<figcaption>AmitSosna<br>עמית סוסנה</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/25/natwary400.jpeg" alt="נטווארי מולקאן">
+<figcaption>natwary400<br>נטווארי מולקאן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/24/norlin.jpeg" alt="נורלין (נטלי) באבאדילה אגוג'ו">
+<figcaption>norlin<br>נורלין (נטלי) באבאדילה אגוג'ו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/05/ShaniGoren.jpg" alt="שני גורן">
+<figcaption>ShaniGoren<br>שני גורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DizaHiman.jpg" alt="דיצה הימן">
+<figcaption>DizaHiman<br>דיצה הימן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AmitShani.jpg" alt="עמית שני">
+<figcaption>AmitShani<br>עמית שני</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvigailIdan.jpg" alt="אביגיל עידן">
+<figcaption>AvigailIdan<br>אביגיל עידן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/12/12/photo_6037129121181581294_x.jpg" alt="וויצ'יאן טמטונג">
+<figcaption>photo_6037129121181581294_x<br>וויצ'יאן טמטונג</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="נטהאפון אונקאו">
+<figcaption>Man_Silhouette<br>נטהאפון אונקאו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/12/07/anucha.png" alt="אנוצ'ה אנגקאו">
+<figcaption>anucha<br>אנוצ'ה אנגקאו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="סנטי בונפרום">
+<figcaption>Man_Silhouette<br>סנטי בונפרום</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="מאני ג'ירצ'אט">
+<figcaption>Man_Silhouette<br>מאני ג'ירצ'אט</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="פאטאיאנוט טונסאקרי">
+<figcaption>Man_Silhouette<br>פאטאיאנוט טונסאקרי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="בודי סאאנגבון">
+<figcaption>Man_Silhouette<br>בודי סאאנגבון</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="אוטאי סאאנגוואן">
+<figcaption>Man_Silhouette<br>אוטאי סאאנגוואן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="אוואט סוריאסי">
+<figcaption>Man_Silhouette<br>אוואט סוריאסי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="מונגקול פג'ואבון">
+<figcaption>Man_Silhouette<br>מונגקול פג'ואבון</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="וויטון פומי">
+<figcaption>Man_Silhouette<br>וויטון פומי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="פונסוואן פינאקאלו">
+<figcaption>Man_Silhouette<br>פונסוואן פינאקאלו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="בונטום פנקונג">
+<figcaption>Man_Silhouette<br>בונטום פנקונג</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="קומקריט צ'ומבואה">
+<figcaption>Man_Silhouette<br>קומקריט צ'ומבואה</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="בנצ'ה קונגמאני">
+<figcaption>Man_Silhouette<br>בנצ'ה קונגמאני</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/25/wichay400.jpeg" alt="וויצ'אי קלאפאט">
+<figcaption>wichay400<br>וויצ'אי קלאפאט</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="סורין קסונגנן">
+<figcaption>Man_Silhouette<br>סורין קסונגנן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="אוטאי טונסרי">
+<figcaption>Man_Silhouette<br>אוטאי טונסרי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="פאיבון רטאניל">
+<figcaption>Man_Silhouette<br>פאיבון רטאניל</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="קונג סאאלאו">
+<figcaption>Man_Silhouette<br>קונג סאאלאו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="צ'קרפאן סיקנה">
+<figcaption>Man_Silhouette<br>צ'קרפאן סיקנה</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="צ'לרמצ'אי סאאנגקאו">
+<figcaption>Man_Silhouette<br>צ'לרמצ'אי סאאנגקאו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/MargalitMoses.jpg" alt="מרגלית מוזס">
+<figcaption>MargalitMoses<br>מרגלית מוזס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/RoniCariboy.jpg" alt="רוני קריבוי">
+<figcaption>RoniCariboy<br>רוני קריבוי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OpaliaRoitman.jpg" alt="אופליה רויטמן">
+<figcaption>OpaliaRoitman<br>אופליה רויטמן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AdinaMoshe.jpg" alt="עדינה משה">
+<figcaption>AdinaMoshe<br>עדינה משה</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AdaSagi.jpg" alt="עדה שגיא">
+<figcaption>AdaSagi<br>עדה שגיא</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/25/jimmy.jpeg" alt="גאלינור (ג'ימי) פאצ'קו">
+<figcaption>jimmy<br>גאלינור (ג'ימי) פאצ'קו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanYahalomi.jpg" alt="איתן יהלומי">
+<figcaption>EitanYahalomi<br>איתן יהלומי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AishaAlziadna.jpg" alt="עאישה אל-זיאדנה">
+<figcaption>AishaAlziadna<br>עאישה אל-זיאדנה</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/BelalZiadna.jpg" alt="בילאל אל-זיאדנה">
+<figcaption>BelalZiadna<br>בילאל אל-זיאדנה</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/07/mia_regev2.jpg" alt="מיה רגב">
+<figcaption>mia_regev2<br>מיה רגב</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ItaiRegev.jpg" alt="איתי רגב">
+<figcaption>ItaiRegev<br>איתי רגב</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ChenGoldshtainAlmog.jpg" alt="חן גולדשטיין אלמוג">
+<figcaption>ChenGoldshtainAlmog<br>חן גולדשטיין אלמוג</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AgamGolshtainAlmog.jpg" alt="אגם גולדשטיין אלמוג">
+<figcaption>AgamGolshtainAlmog<br>אגם גולדשטיין אלמוג</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/05/TalGoldshtainAlmog.jpg" alt="טל גולדשטיין אלמוג">
+<figcaption>TalGoldshtainAlmog<br>טל גולדשטיין אלמוג</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GalGoldshtainAlmog.jpg" alt="גל גולדשטיין אלמוג">
+<figcaption>GalGoldshtainAlmog<br>גל גולדשטיין אלמוג</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/25/yocheved.jpeg" alt="יוכבד ליפשיץ">
+<figcaption>yocheved<br>יוכבד ליפשיץ</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DafnaAlikim.jpg" alt="דפנה אליקים">
+<figcaption>DafnaAlikim<br>דפנה אליקים</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EllaElikim.jpg" alt="אלה אליקים">
+<figcaption>EllaElikim<br>אלה אליקים</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/HagarBrodez.jpg" alt="הגר ברודץ">
+<figcaption>HagarBrodez<br>הגר ברודץ</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OfriBrodetz.jpg" alt="עפרי ברודץ">
+<figcaption>OfriBrodetz<br>עפרי ברודץ</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OriaBradez.jpg" alt="אוריה ברודץ">
+<figcaption>OriaBradez<br>אוריה ברודץ</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YuvalBrodez.jpg" alt="יובל ברודץ">
+<figcaption>YuvalBrodez<br>יובל ברודץ</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ShiriWeiss.jpg" alt="שירי וייס">
+<figcaption>ShiriWeiss<br>שירי וייס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/NogaWeiss.jpg" alt="נוגה וייס">
+<figcaption>NogaWeiss<br>נוגה וייס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/05/AdiShoham.jpg" alt="עדי שוהם">
+<figcaption>AdiShoham<br>עדי שוהם</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YahelShoham.jpg" alt="יהל שוהם">
+<figcaption>YahelShoham<br>יהל שוהם</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/25/sharon4002.jpeg" alt="שרון אביגדורי">
+<figcaption>sharon4002<br>שרון אביגדורי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/NoamAvigdori.jpg" alt="נעם אביגדורי">
+<figcaption>NoamAvigdori<br>נעם אביגדורי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ShushanHaran.jpg" alt="שושן הרן">
+<figcaption>ShushanHaran<br>שושן הרן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/NeveShoham.jpg" alt="נווה שוהם">
+<figcaption>NeveShoham<br>נווה שוהם</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvivaSigal.jpg" alt="אביבה (אדריאן) סיגל">
+<figcaption>AvivaSigal<br>אביבה (אדריאן) סיגל</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/RazBenAmi.jpg" alt="רז בן עמי">
+<figcaption>RazBenAmi<br>רז בן עמי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/NiliMargalit.jpg" alt="נילי מרגלית">
+<figcaption>NiliMargalit<br>נילי מרגלית</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/HannahPerry.jpg" alt="חנה פרי">
+<figcaption>HannahPerry<br>חנה פרי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/25/nurit.jpeg" alt="נורית קופר">
+<figcaption>nurit<br>נורית קופר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EmiliaAloni.jpg" alt="אמיליה אלוני">
+<figcaption>EmiliaAloni<br>אמיליה אלוני</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DanielAloni.jpg" alt="דניאל אלוני">
+<figcaption>DanielAloni<br>דניאל אלוני</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EmmaKonio.jpg" alt="אמה קוניו">
+<figcaption>EmmaKonio<br>אמה קוניו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YuliKonio.jpg" alt="יולי קוניו">
+<figcaption>YuliKonio<br>יולי קוניו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/SharonKunio.jpg" alt="שרון אלוני קוניו">
+<figcaption>SharonKunio<br>שרון אלוני קוניו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/TammyMetzger.jpg" alt="תמר מצגר">
+<figcaption>TammyMetzger<br>תמר מצגר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/IlanaGrizovsli.jpg" alt="אילנה גריצ'בסקי">
+<figcaption>IlanaGrizovsli<br>אילנה גריצ'בסקי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/25/nathalie.jpeg" alt="נטלי רענן">
+<figcaption>nathalie<br>נטלי רענן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/25/judith.jpeg" alt="יהודית רענן">
+<figcaption>judith<br>יהודית רענן</figcaption>
+</figure>
+
 </div>
 
 </div>
